--- a/Themes/theme1.conf
+++ b/Themes/theme1.conf
@@ -6,8 +6,8 @@ ScreenHeight="1080"
 ScreenPadding=""
 # Default 0, Options: from 0 to min(screen width/2,screen height/2). 
 
-Font="JetbrainsMono Nerd"
-FontSize=""
+Font="Open Sans"
+FontSize="13"
 # Default is screen height divided by 80 (1080/80=13.5), Options: 0-inf.
 
 KeyboardSize="0.4"
@@ -27,10 +27,25 @@ HeaderText=""
 
 #################### Background ####################
 
-Background="Backgrounds/1.png"
-# Must be relative path.
+BackgroundPlaceholder=""
+# Must be a relative path.
+# Background displayed before the actual background is loaded.
+# Use only if the background is a video, otherwise leave blank.
+# Connected with: Background.
+Background="Backgrounds/astronaut.png"
+# Must be a relative path.
+# Supports: png, jpg, jpeg, webp, gif, avi, mp4, mov, mkv, m4v, webm.
+BackgroundSpeed=""
+# Default 1.0. Options: 0.0-10.0 (can go higher).
+# Speed of animated wallpaper.
+# Connected with: Background.
+PauseBackground=""
+# Default false.
+# If set to true, stops playback of gifs. Works only with gifs.
+# Connected with: Background.
 DimBackground="0.0"
 # Options: 0.0-1.0.
+# Connected with: DimBackgroundColor
 CropBackground="true"
 # Default false.
 # Crop or fit background.
@@ -124,6 +139,8 @@ AllowEmptyPassword="false"
 # Enable login for users without a password.
 AllowUppercaseLettersInUsernames="false"
 # Do not change this! Uppercase letters are generally not allowed in usernames. This option is only for systems that differ from this standard!
+BypassSystemButtonsChecks="false"
+# Skips checking if sddm can perform shutdown, restart, suspend or hibernate, always displays all system buttons.
 RightToLeftLayout="false"
 # Revert the layout either because you would like the login to be on the right hand side or SDDM won't respect your language locale for some reason. This will reverse the current position of FormPosition if it is either left or right and in addition position some smaller elements on the right hand side of the form itself (also when FormPosition is set to center).
 
